# huffman

./: CMakeLists.txt  README.md  tool.cpp  vcpkg.json
huffman-lib/: huffman.cpp  huffman.h
unit-tests/: tests.cpp
